unpackaged/main/default/objects/ETDI_Trainer_Schedules__c/ETDI_Trainer_Schedules__c.object-meta.xml
<CustomObject>
    <label>ETDI Trainer Schedules</label>
    <nameField>
        <displayFormat>SCH-{00000}</displayFormat>
        <label>Schedule Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETDI Trainer Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>