unpackaged/main/default/objects/ETDI_Trainer_Schedules__c/fields/Booking_Request__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Request</label>
    <referenceTo>ETDI_Booking_Request__c</referenceTo>
    <relationshipLabel>ETDI Trainer Schedules</relationshipLabel>
    <relationshipName>ETDI_Trainer_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>