unpackaged/main/default/objects/ETDI_Trainer_Schedules__c/fields/Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>