unpackaged/main/default/objects/ETDI_Trainer_Schedules__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <referenceTo>ETDI_Trainers__c</referenceTo>
    <relationshipLabel>ETDI Trainer Schedules</relationshipLabel>
    <relationshipName>ETDI_Trainer_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>