unpackaged/main/default/objects/ETDI_Trainer_Schedules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>